...
      }
    },
    "一次" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "上个月" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "下个月" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "例如：朋友" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "保存" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "关闭搜索" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "农历" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "分享图片" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "分类" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "删除" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "取消" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "完成" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "恢复并同步" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "提醒" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "搜索日子" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "放弃修改" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "新建分类" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "新的日子" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "日历" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "日子" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "日子名称" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "更多操作" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "没有找到日子" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "没有本机保留版本" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "添加日子" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "清除" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "继续编辑" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "自定义" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "跟随全局" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "返回" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "选择农历日期" : {
      "extractionState" : "manual",
      "localizations" : {
...
